--- a/TIL/2024-02-27.md
+++ b/TIL/2024-02-27.md
@@ -1,5 +1,30 @@
 # 📝TIL(Today I Learned)
 ## 24-02-27
-- [알고리즘 3문제 풀기](https://github.com/PureKite/java-coding-test-study)
-- [클린코드 4장 정리](https://github.com/PureKite/Book/blob/main/CleanCode/Chapter04%20%EC%A3%BC%EC%84%9D.md)
-- [클린코드 5장 정리](https://github.com/PureKite/Book/blob/main/CleanCode/Chapter05%20%ED%98%95%EC%8B%9D%20%EB%A7%9E%EC%B6%94%EA%B8%B0.md)
+### 알고리즘
+#### 예제 
+- 백준 - [블로그](https://github.com/PureKite/java-coding-test-study/blob/main/%EB%B0%B1%EC%A4%80/BOJ21921.java)
+
+#### 문제
+- 예제 문제를 풀던 중 시간 초과 발생
+
+#### 시도한 방법의 문제점
+- 이중 포문으로 풀었기 때문에 시간 초과가 발생
+
+#### 해결 방법 및 새롭게 알게 된 점
+- 누적 합을 하기 위한 슬라이딩 윈도우 기법을 사용하면 해결될 수 있었음!
+- 슬라이딩 윈도우와 투 포인터에 대한 개념 학습
+#### 슬라이딩 윈도우
+- 교집합의 정보를 공유하고, 차이가 나는 양쪽 끝 원소만 갱신하는 방법
+- 항상 구간의 넓이가 고정되어 있음
+- 투 포인터 알고리즘과 연동하여 많이 쓰임
+#### 투 포인터
+- 정렬되어 있는 두 리스트의 합집합에 사용
+- 리스트에 순차적으로 접근해야 할 때 두 개의 점의 위치를 기록하면서 처리하는 알고리즘
+- 알고리즘 문제를 풀 다 완전탐색으로 해결하면 시간 초과가 나는 문제의 대안이 되기도 함
+- 맨 처음에는 start = end = 0이며, 항상 start <= end를 만족해야 함
+- 2개의 포인터는 현재 부분 배열의 시작과 끝을 가리키는 역할을 함
+
+#### 참고
+- https://ji-musclecode.tistory.com/37
+- https://github.com/WooVictory/Ready-For-Tech-Interview/blob/master/Algorithm/%ED%88%AC%ED%8F%AC%EC%9D%B8%ED%84%B0%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md
+- https://butter-shower.tistory.com/226
