:memo: TIL-24-02-29 ~ TIL-24-03-03 수정

--- a/TIL/2024-02-29 ~ 2024.03.03.md
+++ b/TIL/2024-02-29 ~ 2024.03.03.md
@@ -83,3 +83,4 @@
 - [Using Git and feature branches effectively](https://www.jillesvangurp.com/blog/2011-07-16-using-git-and-feature-branches-effectively.html)
 - [지속적 통합](https://velog.io/@jm1225/Continuous-Intergration)
 - [[CI / CD] 당신은 정말 지속적인 통합(CI)을 하고 있는가?](https://steady-coding.tistory.com/491)
+- [하루에 1000번 배포하는 조직 되기](https://blog.banksalad.com/tech/become-an-organization-that-deploys-1000-times-a-day/?gclid=Cj0KCQiA3NX_BRDQARIsALA3fIJ1dXP9Btp4Jqkze2iTPbMh2W3hlXi6ORJJsXBPvkX-d3jSDmGacx4aAphzEALw_wcB#lightweight-branching-model)
